got new swagger routes
